namespace Animachine.Scripts.Core
{
    public static class AnimachineConst
    {
        public static readonly int StateTime = UnityEngine.Animator.StringToHash("stateTime");
        public static readonly int Distance = UnityEngine.Animator.StringToHash("distance");
        public static readonly int Velocity = UnityEngine.Animator.StringToHash("velocity");
        public static readonly int IsGrounded = UnityEngine.Animator.StringToHash("isGrounded");
        public static readonly int IsDestination = UnityEngine.Animator.StringToHash("isDestination");
        public static readonly int IsTarget = UnityEngine.Animator.StringToHash("isTarget");
        public static readonly int IsDamage = UnityEngine.Animator.StringToHash("isDamage");
    }
}